# tmux-manager

./: Cargo.toml  tmux-manager.example.yml
src/: main.rs
src/constructs/: mod.rs  pane.rs  session.rs  window.rs
