[package]
name = "tmux-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.145", features = ["derive"] }
serde_yaml = "0.9.13"
clap = { version = "4.0.9", features = ["derive"] }
